# Webscraper

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/includes/: httpdownloader.cpp
src/scraper/: anchor.cpp  anchor.h  link.cpp  link.h  local.cpp  local.h  mail.cpp  mail.h  page.cpp  page.h  scraperengine.cpp  scraperengine.h
